--- a/src/App.css
+++ b/src/App.css
@@ -128,7 +128,7 @@ h2 {
   padding-top: 0.5rem;
   background-color: rgba(34, 34, 34, 0.6);
   padding-bottom: 0.5rem;
-  text-shadow: 2px 2px 6px rgb(46, 46, 46);
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
 }
 
 .banner_button:hover {
